# LLM-Adapter-GLUE-Benchmark

./: .gitignore  README.md  Template to copy_ results for LLM adapations.xlsx  pyproject.toml
llm_adapters_comparison/: hyper_parameter_config_wo_privacy.json  main.ipynb
llm_adapters_comparison/src/: prefix_lora_tiny_bert.py  train.py
llm_adapters_comparison_local/: hyper_parameter_config_w_privacy.json  main.py
llm_adapters_comparison_local/src/: data_preparation.py  soft_prompt_lora_tiny_bert.py  utils.py
