[project]
name = "llm-adapter-glue-benchmark"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "fsspec>=2025.9.0",
    "huggingface-hub>=0.35.3",
    "lap>=0.5.12",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opacus>=1.5.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "peft>=0.17.1",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
